# multi-robot-coverage-ros

./: LICENSE  README.md  map.yaml
src/frontier_exploration/: CMakeLists.txt  frontier.xml  package.xml
src/frontier_exploration/include/frontier_exploration/: CaseBasedAllocation.h  GreedyBasedAllocation.h  NearestBasedAllocation.h  RankBasedAllocation.h  RankBasedExtention.h
src/frontier_exploration/src/: CaseBasedAllocation.cpp  GreedyBasedAllocation.cpp  NearestBasedAllocation.cpp  RankBasedAllocation.cpp  RankBasedExtention.cpp  frontier_plugins.cpp
src/nav2d_karto/: CMakeLists.txt  package.xml
src/nav2d_karto/include/nav2d_karto/: SpaSolver.h
src/nav2d_karto/src/: SpaSolver.cpp
src/nav2d_navigator/include/nav2d_navigator/: RobotNavigator.h  RobotNavigator.h~
src/nav2d_navigator/src/: RobotNavigator.cpp  RobotNavigator.cpp~  explore_client.cpp  get_map_client.cpp  navigator.cpp  set_goal_client.cpp
src/navigation_stage/move_base_config/: amcl_node.xml~  move_base.xml~
src/remember-all/: CMakeLists.txt  package.xml
src/remember-all/launch/: envi1-2robots.launch  envi1-3robots.launch  envi2-2robots.launch  envi2-3robots.launch  envi3-2robots.launch  envi3-3robots.launch
src/remember-all/maps/: environment1-3.world  environment1.world  environment2-3.world  environment2.world  environment3-3.world  environment3.world  frontier_exploration.rviz  frontier_exploration_3robots.rviz  hokuyo.inc  maze.yaml  myblock.inc
src/remember-all/maps/extra_maps/: environment1.world
src/remember-all/move_base/: base_local_planner_params.yaml  costmap_common_params.yaml  explore_costmap.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/remember-all/navigation/: amcl.launch.xml
src/remember-all/param/: mapper.yaml  navigator.yaml
src/remember-all/src/: simple_navigation_goals.cpp
