<?xml version="1.0"?>
<package>
  <name>frontier_exploration</name>
  <version>1.0.0</version>
  <description>Various strategies for frontier based multi robot coverage in unknown environments</description>

  <maintainer email="er.sushilparti@gmail.com">Sushil Parti</maintainer>

  <license>MIT</license>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
 
  <!-- dependencies for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- dependencies required at compile time: -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav2d_navigator</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>

   <!-- dependencies required at run time: -->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav2d_navigator</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nav2d_navigator plugin="${prefix}/frontier.xml" />
  </export>

</package>
