<?xml version="1.0"?>
<package>
  <name>thesis</name>

  <version>1.0.0</version>

  <description>Remember-All multi robot frontier coverage approach for unknown environments</description>

  <maintainer email="er.sushilparti@gmail.com">Sushil Parti</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- build dependencies --> 
  <build_depend>move_base</build_depend>
  <build_depend>amcl</build_depend>
  <build_depend>stage_ros</build_depend>
  <build_depend>navigation_stage</build_depend>
  <build_depend>multirobot</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <!-- runtime dependencies --> 
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>stage_ros</run_depend>
  <run_depend>navigation_stage</run_depend>
  <run_depend>multirobot</run_depend>
  <run_depend>map_server</run_depend>

</package>
